<resources>
    <string name="app_name">IOSViews</string>
    <string name="action_settings">Settings</string>
    <string name="toolbars">Toolbars</string>
    <string name="default_toolbar">Default Toolbar</string>
    <string name="with_background">With Background</string>
    <string name="with_icon">With Options</string>
    <string name="chips">Chip Tags</string>
    <string name="input">Input Field</string>
    <string name="spinners">Spinners</string>
    <string-array name="spinner_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>
