<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/block.all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ios_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/toolbars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="@string/toolbars" />

        <Button
            android:id="@+id/chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="@string/chips" />

        <Button
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="@string/input" />

        <Button
            android:id="@+id/spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="@string/spinners" />

        <Button
            android:id="@+id/liv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="List item 1" />

        <Button
            android:id="@+id/liv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="List item 2" />

        <Button
            android:id="@+id/liv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:text="List item 3" />
    </LinearLayout>


</ScrollView>